# iptables-ext-dns

./: .clang-format  .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac  install-dependencies.sh  iptables-ext-dns.kmod.el6.spec  iptables-ext-dns.spec  iptables-ext-dns.spec.1.1.0.in  iptables-ext-dns.spec.in  kmodtool-iptables-ext-dns-el6.sh
extensions/: Makefile.am  libxt_dns.c
include/: Makefile  xt_dns.h  xt_dns_flags.h  xt_dns_header.h
modules/: Makefile  kernel.sh  xt_dns.c
perf/: 10k.txt  make_domain.pl  rule.txt
test/: 02_rule_create.sh  03.1_ipv4_udp_match.sh  03.2_ipv4_tcp_match.sh  03.3_ipv6_udp_match.sh  03.4_ipv6_tcp_match.sh  04.1_ipv4_udp_nomatch.sh  04.2_ipv4_tcp_nomatch.sh  04.3_ipv6_udp_nomatch.sh  04.4_ipv6_tcp_nomatch.sh  1_module_load.sh  2_rule_create.sh  3.1.1_check_ipv4_udp_input.sh  3.1.2_check_ipv4_udp_prerouting.sh  3.2.1_check_ipv4_tcp_input.sh  3.2.2_check_ipv4_tcp_prerouting.sh  3.3.1_check_ipv6_udp_input.sh  3.3.2_check_ipv6_udp_prerouting.sh  3.4.1_check_ipv6_tcp_input.sh  3.4.2_check_ipv6_tcp_prerouting.sh  4.1.1_check_no_ipv4_udp_input.sh  4.1.2_check_no_ipv4_udp_prerouting.sh  4.2.1_check_no_ipv4_tcp_input.sh  4.2.2_check_no_ipv4_tcp_prerouting.sh  4.3.1_check_no_ipv6_udp_input.sh  4.3.2_check_no_ipv6_udp_mangle.sh  4.4.1_check_no_ipv6_tcp_input.sh  4.4.2_check_no_ipv6_tcp_prerouting.sh  Makefile.am  query_match.sh  query_match_common.sh  query_nomatch.sh  test-ipt.sh
test/common/: 2_rule_create.sh  Makefile.am
test/ipv4/: 3.1.1_check_ipv4_udp_input.sh  3.1.2_check_ipv4_udp_prerouting.sh  3.2.1_check_ipv4_tcp_input.sh  3.2.2_check_ipv4_tcp_prerouting.sh  4.1.1_check_no_ipv4_udp_input.sh  4.1.2_check_no_ipv4_udp_prerouting.sh  4.2.1_check_no_ipv4_tcp_input.sh  4.2.2_check_no_ipv4_tcp_prerouting.sh  Makefile.am
test/ipv6/: 3.3.1_check_ipv6_udp_input.sh  3.3.2_check_ipv6_udp_prerouting.sh  3.4.1_check_ipv6_tcp_input.sh  3.4.2_check_ipv6_tcp_prerouting.sh  4.3.1_check_no_ipv6_udp_input.sh  4.3.2_check_no_ipv6_udp_mangle.sh  4.4.1_check_no_ipv6_tcp_input.sh  4.4.2_check_no_ipv6_tcp_prerouting.sh  Makefile.am
test/util/: query_match.sh  query_match_common.sh  query_nomatch.sh  test-ipt.sh
