TESTS=1_module_load.sh \
2_rule_create.sh \
3.1.1_check_ipv4_udp_input.sh \
3.1.2_check_ipv4_udp_prerouting.sh \
3.2.1_check_ipv4_tcp_input.sh \
3.2.2_check_ipv4_tcp_prerouting.sh \
3.3.1_check_ipv6_udp_input.sh \
3.3.2_check_ipv6_udp_prerouting.sh \
3.4.1_check_ipv6_tcp_input.sh \
3.4.2_check_ipv6_tcp_prerouting.sh \
4.1.1_check_no_ipv4_udp_input.sh \
4.1.2_check_no_ipv4_udp_prerouting.sh \
4.2.1_check_no_ipv4_tcp_input.sh \
4.2.2_check_no_ipv4_tcp_prerouting.sh \
4.3.1_check_no_ipv6_udp_input.sh \
4.3.2_check_no_ipv6_udp_mangle.sh \
4.4.1_check_no_ipv6_tcp_input.sh \
4.4.2_check_no_ipv6_tcp_prerouting.sh 
